force-app/main/default/objects/LOVING_Division__mdt/LOVING_Division__mdt.object-meta.xml
<CustomObject>
    <label>LOVING Division</label>
    <pluralLabel>LOVING Divisions</pluralLabel>
</CustomObject>