force-app/main/default/objects/LOVING_Division__mdt/fields/Division_Value__c.field-meta.xml
<CustomField>
    <fullName>Division_Value__c</fullName>
    <description>Value used in WHERE clauses against Work_Order__c.Division__c. Use "All" for the "All Divisions" virtual entry.</description>
    <label>Division Value</label>
    <length>60</length>
    <required>true</required>
    <type>Text</type>
</CustomField>